--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <meta charset="UTF-8">
+
+    <link rel="icon" href="/favicon.ico">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <title>Vite App</title>
+  
+    <!-- preconnect to media -->
+    <link rel="preconnect" href="https://vortex.worldofwarships.eu/api/encyclopedia/en/">
+    <!-- preconnect to google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- app container -->
+    <div id="app" class="app-body"></div>
+
+    <!-- scripts -->
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
