--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="icon" href="/favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <title>Vite App</title>
+    
+    <title>World of Warships</title>
+    <meta name="description" content="World of Warships. Test task.">
   
     <!-- preconnect to media -->
     <link rel="preconnect" href="https://vortex.worldofwarships.eu/api/encyclopedia/en/">
