--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8">
 
-    <link rel="icon" href="/favicon.ico">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>World of Warships</title>
     <meta name="description" content="World of Warships. Test task.">
+
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#328685">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
   
     <!-- preconnect to media -->
     <link rel="preconnect" href="https://vortex.worldofwarships.eu/api/encyclopedia/en/">
