docs: standard-version added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <!-- preconnect to google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- critical css -->
+    <style>body { background: #102031; }</style>
   </head>
   <body>
     <!-- app container -->
